--- a/Test 1.Rmd
+++ b/Test 1.Rmd
@@ -18,6 +18,7 @@ print("hello world")
 
 print("hello from Munisa")
 print("Second commit by Munisa")
+head(student_depression_dataset)
 ```
 
 ```{r}
