first real push

--- a/Real document.Rmd
+++ b/Real document.Rmd
@@ -4,6 +4,21 @@ author: "Juliette Dashe"
 date: "2025-11-15"
 output: html_document
 ---
+```{r}
+
+
+student_depression_dataset$id <- NULL
+student_depression_dataset$`Work Pressure` <- NULL
+student_depression_dataset$`Job Satisfaction` <- NULL
+student_depression_dataset$Profession <- NULL
+
+table(student_depression_dataset$Degree)
+
+
+names(student_depression_dataset)
+```
+
+
 
 ```{r}
 
