--- a/Real document.Rmd
+++ b/Real document.Rmd
@@ -92,12 +92,51 @@ knn_fit <- fit(knn_model, Depression ~ ., data = train_processed)
 ```{r}
 #Leah's code
 
+#Importing Dataset
 library(readr)
 student_depression_dataset <- read_csv("student_depression_dataset.csv")
-View(student_depression_dataset)
 
+#Data Cleaning
 student_depression_dataset$id <- NULL
 student_depression_dataset$`Work Pressure` <- NULL
 student_depression_dataset$`Job Satisfaction` <- NULL
 student_depression_dataset$Profession <- NULL
+
+#Juliette's Data Cleaning with Degree Currently Pursuing
+library(dplyr)
+
+df_clean <- student_depression_dataset |>
+  mutate(
+    # Making degrees into 5 categories 
+    Academic_Level = case_when(
+      # High School
+      Degree == "'Class 12'" ~ "High School",
+      
+      # Bachelor's Degrees (including B.Pharm, B.Tech, MBBS, etc.)
+      Degree %in% c("BE", "B.Arch", "BHM", "B.Com", "BSc", "B.Ed", "LLB", 
+                    "B.Pharm", "B.Tech", "BA", "BBA", "BCA") ~ "Bachelor's",
+      
+      # Master's Degrees/Professional Doctorates
+      Degree %in% c("MA", "MBA", "MBBS", "MCA", "LLM", "MD", "M.Com", 
+                    "ME", "M.Ed", "MHM", "M.Pharm", "MSc", "M.Tech", "MBBS") ~ "Master's",
+      
+      # PhD
+      Degree == "PhD" ~ "PhD",
+      
+      # Other/Unspecified
+      Degree == "Others" ~ "Other",
+      
+      # Catch-whatever else I might be missing 
+      TRUE ~ "Unknown"
+    ),
+    
+    # Convert the new column to an ordered factor for consistent analysis
+    Academic_Level = factor(Academic_Level, 
+                            levels = c("High School", "Bachelor's", "Master's", "PhD", "Other", "Unknown"))
+  )
+
+cat("Frequency of new Academic Levels:\n")
+df_clean |>
+  count(Academic_Level) |>
+  print()
 ```
